# Agent_class

./: .gitignore  AGENTS.md  LangGraph 工作流.md  README.md  plan.md  后端新数据库模型 + 状态机 + API 草案.md
backend/: .env.example  README.md  pyproject.toml
backend/src/backend/: __init__.py  app.py  config.py  db.py  main.py  models.py  schemas.py
backend/src/backend/agents/: __init__.py  answer_critic_agent.py  answer_generator_agent.py  answer_judge_agent.py  asset_selector_agent.py  base.py  contracts.py  course_init_agent.py  grading_agent.py  grading_validator_agent.py  naming_policy_agent.py  review_material_parser_agent.py  submission_match_agent.py
backend/src/backend/api/: __init__.py  dependencies.py  router.py
backend/src/backend/core/: __init__.py  background_jobs.py  errors.py  ids.py  logging.py  pathing.py  runtime_review_settings.py  settings.py
backend/src/backend/db/: base.py  migration.py  session.py
backend/src/backend/domain/: __init__.py  enums.py  state_machine.py
backend/src/backend/graphs/: __init__.py  common.py  course_init_graph.py  naming_plan_graph.py  review_prep_graph.py  review_run_parent_graph.py  submission_import_graph.py  submission_review_graph.py
backend/src/backend/schemas/: __init__.py  approvals.py  assignments.py  audits.py  common.py  (+7 more)
backend/tests/: test_file_ops.py  test_pathing.py  test_review_graphs.py  test_runtime_review_settings.py
frontend/: Cargo.toml  README.md  build-windows-msvc.sh
frontend/src/: api.rs  app.rs  main.rs  models.rs
frontend/toolchain/msvc-shims/: clang++  clang-cl  lld-link  llvm-lib
(+66 files in other folders)
