[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
